# KG-LRR

./: README.md  pyproject.toml
code/: KGLRR.py  Procedure.py  dataloader.py  main.py  utils.py
config/: amazon-book.yaml  amazon-electronics.yaml  yelp2018.yaml
data/: README.md
