[project]
name = "kg-lrr"
version = "0.1.0"
description = "Knowledge Graph Logic Regularized Recommender"
authors = [{ name = "Emanuele", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.21.0",
    "pandas==1.3.0",
    "scikit-learn==1.1.1",
    "scipy==1.6.0",
    "torch==1.8.1",
    "torch-geometric==1.7.2",
    "tqdm==4.61.2",
    "PyYAML",
    "tensorboardX"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code"]
