[project]
name = "kg-lrr"
version = "0.1.0"
description = "Knowledge Graph Logic Regularized Recommender"
authors = [{ name = "Emanuele", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24",
    "pandas==1.5",
    "scikit-learn==1.3.1",
    "scipy==1.10.1",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "torch-geometric==2.5.0",
    "tqdm",
    "PyYAML",
    "tensorboardX"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["code"]
